--- a/content/cn/posts/2023-01-28-read.md
+++ b/content/cn/posts/2023-01-28-read.md
@@ -9,7 +9,7 @@ toc: false
 
 很难说是从什么时候开始，看书就变成了同时看好几本书，而不是看完一本再看下一本。这本来是好事，就像不同的学科穿插着学一样，不会困窘于原地。
 
-但当我看书的设备/形式越来越多，同时在看的书的数量就变得一发不可收拾。kindle是目前使用频率最低一种形式，上面看了将近一一半的一本以前来页的书，已经放在那一两个月了。
+但当我看书的设备/形式越来越多，同时在看的书的数量就变得一发不可收拾。kindle是目前使用频率最低一种形式，上面看了将近一一半的一本一千来页的书，已经放在那一两个月了。
 
 电子书看得最多，大多是在网上找的资源，主要是epub的格式。这种情况下，我通常会传到微信读书里，手机和电脑同步起来也方便，常是电脑看到一本，在出门之后拿着手机接着看，kindle app同理。之所以强调这点，因为之前傻傻地在手机上用iBook看书，而电脑上用neatreader。手机上的书，顶多用iPad看看，却用不了电脑。而电脑上的书，出门之后又没法看了。
 
@@ -19,4 +19,4 @@ toc: false
 
 不过因为各式各样的看书形式，一本书看一半就扭过头看其他书的情况也越来越多。这也是为什么我越来越少能专注于注重情节的小说，而读起章节分明的社科书越来越快了吧。
 
-*如果是在看微信读书上能找的免费书，那么微信读书是最方便的。*
+*如果是看在微信读书上能找的免费书，那么微信读书是最方便的。*
