--- a/content/cn/posts/2023-02-01-thrush.md
+++ b/content/cn/posts/2023-02-01-thrush.md
@@ -129,8 +129,9 @@ toc: true
 华莱士·斯蒂文斯的《<a href="https://www.poetryfoundation.org/poems/45236/thirteen-ways-of-looking-at-a-blackbird">观察黑鸟的十三种方式</a>》（这首诗中的black bird是否指the common blackbird存疑。）<br /><br />
 
 <columns>
-<columns: auto>
-<columns: 2>
+<column-width: auto>
+<columns-count: 2>
+
 **I**<br>
 Among twenty snowy mountains, <br>  
 The only moving thing <br>  
@@ -146,39 +147,23 @@ The blackbird whirled in the autumn winds.   <br>
 It was a small part of the pantomime.<br /><br />   
 
 **IV**<br>
-A man and a woman<br>   
-Are one. <br>  
-A man and a woman and a blackbird <br>  
-Are one.   <br /><br />
+A man and a woman<br>Are one.<br>A man and a woman and a blackbird<br>Are one.<br /><br />
 
 **V**<br>
 I do not know which to prefer,  <br> 
-The beauty of inflections  <br> 
-Or the beauty of innuendoes,<br>   
-The blackbird whistling<br>   
-Or just after.   <br /><br />
+The beauty of inflections<br>Or the beauty of innuendoes,<br>The blackbird whistling<br>Or just after.   <br /><br />
 
 **VI**<br>
-Icicles filled the long window <br>  
-With barbaric glass.   <br>
-The shadow of the blackbird <br>  
-Crossed it, to and fro. <br>  
-The mood   <br>
-Traced in the shadow   <br>
+Icicles filled the long window<br>With barbaric glass.<br>The shadow of the blackbird<br>Crossed it, to and fro. <br>  
+The mood<br>Traced in the shadow   <br>
 An indecipherable cause.<br /><br />  
 
 **VII**<br>
-O thin men of Haddam,<br>   
-Why do you imagine golden birds?   <br>
-Do you not see how the blackbird <br>  
-Walks around the feet<br>   
-Of the women about you?  <br /><br /> 
+O thin men of Haddam,<br>Why do you imagine golden birds?   <br>
+Do you not see how the blackbird <br>Walks around the feet<br>Of the women about you?  <br /><br /> 
 
 **VIII**<br>
-I know noble accents<br>   
-And lucid, inescapable rhythms;<br>   
-But I know, too,   <br>
-That the blackbird is involved  <br> 
+I know noble accents<br>And lucid, inescapable rhythms;<br>But I know, too,<br>That the blackbird is involved  <br> 
 In what I know.  <br /><br /> 
 
 **IX**<br>
@@ -187,26 +172,21 @@ It marked the edge   <br>
 Of one of many circles.   <br /><br />
 
 **X**<br>
-At the sight of blackbirds <br>  
-Flying in a green light,  <br> 
-Even the bawds of euphony <br>  
-Would cry out sharply. <br /><br />  
+At the sight of blackbirds <br>Flying in a green light,  <br> 
+Even the bawds of euphony <br>Would cry out sharply. <br /><br />  
 
 **XI**<br>
-He rode over Connecticut <br>  
-In a glass coach.   <br>
+He rode over Connecticut<br>In a glass coach.   <br>
 Once, a fear pierced him,   <br>
 In that he mistook   <br>
 The shadow of his equipage   <br>
 For blackbirds.   <br /><br />
 
 **XII**<br>
-The river is moving. <br>  
-The blackbird must be flying.  <br /><br /> 
+The river is moving.<br>The blackbird must be flying.  <br /><br /> 
 
 **XIII**<br>
-It was evening all afternoon.<br>   
-It was snowing   <br>
+It was evening all afternoon.<br>It was snowing<br>
 And it was going to snow.  <br> 
 The blackbird sat   <br>
 In the cedar-limbs.<br /><br />
