--- a/content/cn/posts/2023-02-01-thrush.md
+++ b/content/cn/posts/2023-02-01-thrush.md
@@ -29,7 +29,7 @@ toc: true
 
 在它的介绍中，频繁被提到：它被很多诗人写进诗里，是诗歌常见的意象。<br /><br />
 
-比如：华兹华斯的《<a href="https://www.poetryfoundation.org/poems/45557/the-tables-turned">The Tables Turned</a>》<br /><br />
+比如：华兹华斯的《<a href="https://www.poetryfoundation.org/poems/45557/the-tables-turned">The Tables Turned</a>》<br>
 > And hark! how blithe the throstle sings!<br>
 > He, too, is no mean preacher:  <br>
 > Come forth into the light of things,  <br>
@@ -38,9 +38,9 @@ toc: true
 > 他也不是平庸的传教士：  <br>
 > 来到事物的光中，  <br>
 > 让大自然成为你的老师。<br>
-> *(谷歌自动翻译，找中译版太麻烦了)*<br /><br />
+*(谷歌自动翻译，找中译版太麻烦了)*<br /><br />
 
-托马斯·哈代的《<a href="https://www.poetryfoundation.org/poems/44325/the-darkling-thrush">The Darkling Thrush</a>》<br /><br />
+托马斯·哈代的《<a href="https://www.poetryfoundation.org/poems/44325/the-darkling-thrush">The Darkling Thrush</a>》<br>
 > At once a voice arose among<br>
 >     The bleak twigs overhead<br>
 > In a full-hearted evensong<br>
@@ -61,16 +61,16 @@ toc: true
 还有勃朗宁的《<a href="https://www.poetryfoundation.org/poems/43758/home-thoughts-from-abroad">异乡情思</a>》<br /><br />
 > And after April, when May follows,  <br>
 > And the whitethroat builds, and all the swallows!  <br>
->　　Hark, where my blossom'd peartree in the hedge  <br>
->　　Leans to the field and scatters n the clover  <br>
->　　Blossoms and dewdrops—at the bent spray's edge—  <br>
->　　That's the wise thrush; he sings each song twice over,  <br>
->　　Lest you should think he never could recapture <br> 
->　　The first fine careless rapture!  <br>
->　　And though the fields look rough with hoary dew,  <br>
->　　All will be gay when noontide wakes anew  <br>
+> Hark, where my blossom'd peartree in the hedge  <br>
+> Leans to the field and scatters n the clover  <br>
+> Blossoms and dewdrops—at the bent spray's edge—  <br>
+> That's the wise thrush; he sings each song twice over,  <br>
+> Lest you should think he never could recapture <br> 
+> The first fine careless rapture!  <br>
+> And though the fields look rough with hoary dew,  <br>
+> All will be gay when noontide wakes anew  <br>
 > The buttercups, the little children's dower  <br>
-> --Far brighter than this gaudy milon-flower!<br /><br />
+> --Far brighter than this gaudy milon-flower!<br>
 
 > 四月逝去，五月循踪而至，  <br>
 > 灰雀筑巢，还有普天下的燕子！  <br>
@@ -80,7 +80,7 @@ toc: true
 > 尽管白露使田野显得凄怆，  <br>
 > 正午的太阳将使一切重现光芒。  <br>
 > 那金凤花，孩子们的嫁妆，  <br>
-> ——比这俗丽的甜瓜更为灿烂明亮！<br /><br />
+> ——比这俗丽的甜瓜更为灿烂明亮！<br><br /><br />
 
 ### 画眉
 
@@ -89,10 +89,10 @@ toc: true
 画眉，the Chinese hwamei/Garrulax canorus，为中国著名的传统笼鸟，备受养鸟者的推崇。英文名为Hwamei，来自画眉（huà-méi） ，表示“画的眉”，指鸟的眼睛周围的独特标记。<br /><br />
 
 欧阳修的《画眉鸟》<br>
-百啭千声随意移，<br>
-山花红紫树高低。<br>
-始知锁向金笼听，<br>
-不及林间自在啼<br /><br />
+> 百啭千声随意移，<br>
+> 山花红紫树高低。<br>
+> 始知锁向金笼听，<br>
+> 不及林间自在啼<br /><br />
 
 ### 隐夜鸫
 
@@ -101,27 +101,27 @@ toc: true
 惠特曼在《<a href="https://www.poetryfoundation.org/poems/45480/when-lilacs-last-in-the-dooryard-bloomd">When Lilacs Last in the Dooryard Bloom’d</a>》写到：<br /><br />
 
 > In the swamp in secluded recesses,  <br>
-> A shy and hidden bird is warbling a song.  <br /><br />
-
+> A shy and hidden bird is warbling a song.  <br>
+><br /><br />
 > Solitary the thrush,  <br>
 > The hermit withdrawn to himself, avoiding the settlements,  <br>
-> Sings by himself a song.  <br /><br />
-
+> Sings by himself a song.   <br>
+> <br /><br />
 > Song of the bleeding throat,  <br>
 > Death’s outlet song of life, (for well dear brother I know,  <br>
-> If thou wast not granted to sing thou would’st surely die.)<br /><br />
-
+> If thou wast not granted to sing thou would’st surely die.)<br>
+> <br /><br />
 > 在大泽中的僻静的深处，  <br>
-> 一只隐藏着的羞怯的小鸟唱着一支歌。  <br /><br />
-  
+> 一只隐藏着的羞怯的小鸟唱着一支歌。   <br>
+><br /><br />
 > 这只孤独的鸫鸟，  <br>
 > 它象隐士般藏起来，避开人的住处，  <br>
-> 独自唱着一支歌。  <br /><br />
-  
+> 独自唱着一支歌。   <br>
+><br /><br />
 > 唱着咽喉啼血的歌， <br> 
 > 唱着免除死亡的生命的歌，（因为，亲爱的兄弟，我很知道，  <br>
-> 假使你不能歌唱，你一定就会死亡。）<br /><br />
-
+> 假使你不能歌唱，你一定就会死亡。） <br>
+><br /><br />
 ### 乌鸫
 
 最后一个我想介绍的，也就是我早就提到的乌鸫（the common blackbird/Turdus merula）属于鸫科，原产于欧洲、亚洲和北非。它们的体长约为25厘米，可通过其光亮的黑色羽翼和红色的眼睛来识别。乌鸫也以其适应性而闻名，在许多城市地区可以看到它们，它们利用花园和公园作为食物来源。 <br /><br />
@@ -133,9 +133,7 @@ toc: true
 <columns-count: 2>
 
 **I**<br>
-Among twenty snowy mountains, <br>  
-The only moving thing <br>  
-Was the eye of the blackbird. <br /><br />  
+Among twenty snowy mountains,<br>The only moving thing <br>Was the eye of the blackbird. <br /><br />  
 
 **II**<br>
 I was of three minds,   <br>
@@ -154,8 +152,7 @@ I do not know which to prefer,  <br>
 The beauty of inflections<br>Or the beauty of innuendoes,<br>The blackbird whistling<br>Or just after.   <br /><br />
 
 **VI**<br>
-Icicles filled the long window<br>With barbaric glass.<br>The shadow of the blackbird<br>Crossed it, to and fro. <br>  
-The mood<br>Traced in the shadow   <br>
+Icicles filled the long window<br>With barbaric glass.<br>The shadow of the blackbird<br>Crossed it, to and fro.<br>The mood<br>Traced in the shadow<br>
 An indecipherable cause.<br /><br />  
 
 **VII**<br>
