--- a/content/cn/posts/2023-02-01-thrush.md
+++ b/content/cn/posts/2023-02-01-thrush.md
@@ -38,7 +38,7 @@ toc: true
 > 他也不是平庸的传教士：  <br>
 > 来到事物的光中，  <br>
 > 让大自然成为你的老师。<br>
-*(谷歌自动翻译，找中译版太麻烦了)*<br /><br />
+
 
 托马斯·哈代的《<a href="https://www.poetryfoundation.org/poems/44325/the-darkling-thrush">The Darkling Thrush</a>》<br>
 > At once a voice arose among<br>
@@ -58,7 +58,7 @@ toc: true
 > 却决心把它的心灵敞开，<br>
 > 倾泻向浓浓的黑暗。<br>
 
-还有勃朗宁的《<a href="https://www.poetryfoundation.org/poems/43758/home-thoughts-from-abroad">异乡情思</a>》<br /><br />
+还有勃朗宁的《<a href="https://www.poetryfoundation.org/poems/43758/home-thoughts-from-abroad">异乡情思</a>》<br>
 > And after April, when May follows,  <br>
 > And the whitethroat builds, and all the swallows!  <br>
 > Hark, where my blossom'd peartree in the hedge  <br>
@@ -71,7 +71,7 @@ toc: true
 > All will be gay when noontide wakes anew  <br>
 > The buttercups, the little children's dower  <br>
 > --Far brighter than this gaudy milon-flower!<br>
-
+> <br /><br />
 > 四月逝去，五月循踪而至，  <br>
 > 灰雀筑巢，还有普天下的燕子！  <br>
 > 围篱旁我那一树梨花  <br>
@@ -80,7 +80,7 @@ toc: true
 > 尽管白露使田野显得凄怆，  <br>
 > 正午的太阳将使一切重现光芒。  <br>
 > 那金凤花，孩子们的嫁妆，  <br>
-> ——比这俗丽的甜瓜更为灿烂明亮！<br><br /><br />
+> ——比这俗丽的甜瓜更为灿烂明亮！<br>
 
 ### 画眉
 
@@ -92,7 +92,7 @@ toc: true
 > 百啭千声随意移，<br>
 > 山花红紫树高低。<br>
 > 始知锁向金笼听，<br>
-> 不及林间自在啼<br /><br />
+> 不及林间自在啼。<br>
 
 ### 隐夜鸫
 
@@ -120,8 +120,8 @@ toc: true
 ><br /><br />
 > 唱着咽喉啼血的歌， <br> 
 > 唱着免除死亡的生命的歌，（因为，亲爱的兄弟，我很知道，  <br>
-> 假使你不能歌唱，你一定就会死亡。） <br>
-><br /><br />
+> 假使你不能歌唱，你一定就会死亡。）<br>
+
 ### 乌鸫
 
 最后一个我想介绍的，也就是我早就提到的乌鸫（the common blackbird/Turdus merula）属于鸫科，原产于欧洲、亚洲和北非。它们的体长约为25厘米，可通过其光亮的黑色羽翼和红色的眼睛来识别。乌鸫也以其适应性而闻名，在许多城市地区可以看到它们，它们利用花园和公园作为食物来源。 <br /><br />
