--- a/content/cn/posts/2023-02-01-thrush.md
+++ b/content/cn/posts/2023-02-01-thrush.md
@@ -13,6 +13,8 @@ toc: true
 
 故事要从上周拍的照片说起。早上十点左右，我带着相机，路过Denny Yard的时候，看到不少鸟在满是露水的草坪上觅食。天阴惨惨的，快门速度也调不高，一连摁了几十张，也拍不到什么太清楚的照片。几十张里，只挑出了这张，裁剪过后，额外加了清晰度。<br /><br />
 
+<figure src="/files/thrush.jpg">
+
 我着实喜欢，这如同加了柔光滤镜的露珠。<br /><br />
 
 问题来了，这是哪种鸟？<br /><br />
@@ -46,7 +48,7 @@ toc: true
 > In a full-hearted evensong<br>
 >     Of joy illimited;<br>
 > An aged thrush, frail, gaunt, and small,<br>
->     In blast-beruffled plume,<br><br>
+>     In blast-beruffled plume,<br>
 > Had chosen thus to fling his soul<br>
 >     Upon the growing gloom.<br /><br />
 > 突然间，头顶上有个声音<br>
