--- a/content/cn/posts/2023-02-01-thrush.md
+++ b/content/cn/posts/2023-02-01-thrush.md
@@ -11,7 +11,7 @@ toc: true
 
 ### 起因
 
-故事要从上周拍的照片说起。早上十点左右，我带着相机，路过Denny Yard的时候，看到不少鸟在满是露水的草坪上觅食。天阴惨惨的，快门速度也调不高，一连摁了几十张，也拍不到什么太清楚的照片。几十张里，只挑出了这张，裁剪过后，额外加了清晰度。<br /><br />
+故事要从上周拍的照片说起。早上十点左右，我带着相机，路过Denny Yard的时候，看到不少鸟在满是露水的草坪上觅食。天阴惨惨的，快门速度也调不高，一连摁了几十张，也拍不到什么太清楚的照片。几十张里，只挑出了这张，裁剪过后，额外加了清晰度。<br>
 
 {{<figure src="/files/thrush.jpg">}}
 
@@ -130,9 +130,8 @@ toc: true
 
 华莱士·斯蒂文斯的《<a href="https://www.poetryfoundation.org/poems/45236/thirteen-ways-of-looking-at-a-blackbird">观察黑鸟的十三种方式</a>》（这首诗中的black bird是否指the common blackbird存疑。）<br /><br />
 
-<columns>
-<column-width: auto>
-<columns-count: 2>
+{{<columns>}}
+
 
 **I**<br>
 Among twenty snowy mountains,<br>The only moving thing <br>Was the eye of the blackbird. <br /><br />  
@@ -143,7 +142,7 @@ Like a tree   <br>
 In which there are three blackbirds.   <br /><br />
 
 **III**<br>
-The blackbird whirled in the autumn winds.   <br>
+The blackbird whirled in the autumn winds.<br>
 It was a small part of the pantomime.<br /><br />   
 
 **IV**<br>
@@ -189,7 +188,7 @@ It was evening all afternoon.<br>It was snowing<br>
 And it was going to snow.  <br> 
 The blackbird sat   <br>
 In the cedar-limbs.<br /><br />
-<column>
+{{<column>}}
 周围二十座雪山，<br>
 惟一动弹的，<br>
 是黑鸟的眼睛。<br /><br />
@@ -257,5 +256,5 @@ In the cedar-limbs.<br /><br />
 那黑鸟<br>
 坐在雪松的枝间。<br /><br />
 
-<endcolumn>
+{{<endcolumn>}}
 
