--- a/content/cn/posts/2023-02-01-thrush.md
+++ b/content/cn/posts/2023-02-01-thrush.md
@@ -189,6 +189,8 @@ And it was going to snow.  <br>
 The blackbird sat   <br>
 In the cedar-limbs.<br /><br />
 {{<column>}}
+<br>
+<br>
 周围二十座雪山，<br>
 惟一动弹的，<br>
 是黑鸟的眼睛。<br /><br />
@@ -258,3 +260,8 @@ In the cedar-limbs.<br /><br />
 
 {{<endcolumn>}}
 
+### 尾声
+
+无论是棕林鸫，欧歌鸫，隐夜鸫，乌鸫，或者是画眉。这些与人类共同生活的林中生灵，无论生活在何处，始终是被人类惦记着的。<br /><br />
+
+观察鸟类的方式有无数种，我可以用诗歌记录。<br /><br />
