--- a/content/cn/posts/2023-02-01-thrush.md
+++ b/content/cn/posts/2023-02-01-thrush.md
@@ -131,6 +131,8 @@ toc: true
 华莱士·斯蒂文斯的《<a href="https://www.poetryfoundation.org/poems/45236/thirteen-ways-of-looking-at-a-blackbird">观察黑鸟的十三种方式</a>》（这首诗中的black bird是否指the common blackbird存疑。）<br /><br />
 
 {{<columns>}}
+{{<column-width: auto>}}
+{{<columns-count: 2>}}
 
 
 **I**<br>
@@ -191,28 +193,34 @@ In the cedar-limbs.<br /><br />
 {{<column>}}
 <br>
 <br>
+**一**<br>
 周围二十座雪山，<br>
 惟一动弹的，<br>
 是黑鸟的眼睛。<br /><br />
 
+**二**<br>
 我有三种思想，<br>
 像一棵树，<br>
 栖着三只黑鸟。<br /><br />
 
+**三**<br>
 黑鸟在秋风阵中疾旋，<br>
 它是哑剧中的小角色。<br /><br />
 
+**四**<br>
 一男一女<br>
 乃一体。<br>
 一男一女一黑鸟<br>
 乃一体。<br /><br />
 
+**五**<br>
 我不知如何取舍，<br>
 变调之美<br>
 抑或曲隐之美，<br>
 黑鸟啸鸣中，<br>
 抑或其后。<br /><br />
 
+**六**<br>
 冰凌填满长窗，<br>
 用粗野的玻璃。<br>
 黑鸟的影子<br>
@@ -221,27 +229,32 @@ In the cedar-limbs.<br /><br />
 在影子中追索<br>
 难以辨释的导因。<br /><br />
 
+**七**<br>
 哈丹镇的细瘦爷儿们，<br>
 为何要想象金色的鸟？<br>
 难道你们没看到<br>
 那黑鸟绕行于<br>
 你们周围女人的脚？<br /><br />
 
+**八**<br>
 我识得高贵的声调<br>
 以及逃脱不去的明晰节奏；<br>
 但我也知道，<br>
 那黑鸟关涉<br>
 我所知的一切。<br /><br />
 
+**九**<br>
 当黑鸟飞出视野，<br>
 它便划定一个边际，<br>
 为许多圆圈之一。<br /><br />
 
+**十**<br>
 瞥见数只黑鸟<br>
 飞在绿光中，<br>
 甚至莺舌百转的鸨母<br>
 也都会尖厉地叫。<br /><br />
 
+**十一**<br>
 他乘着玻璃马车<br>
 驶过康省。<br>
 曾有一时，恐惧穿心，<br>
@@ -249,9 +262,11 @@ In the cedar-limbs.<br /><br />
 他的车马之影<br>
 是黑鸟憧憧。<br /><br />
 
+**十二**<br>
 河，在动。<br>
 黑鸟，肯定在飞。<br /><br />
 
+**十三**<br>
 整个下午都是傍晚。<br>
 一直在下雪，<br>
 过后还会下雪。<br>
@@ -264,4 +279,4 @@ In the cedar-limbs.<br /><br />
 
 无论是棕林鸫，欧歌鸫，隐夜鸫，乌鸫，或者是画眉。这些与人类共同生活的林中生灵，无论生活在何处，始终是被人类惦记着的。<br /><br />
 
-观察鸟类的方式有无数种，我可以用诗歌记录。<br /><br />
+观察鸟类的方式有无数种，我用诗歌记录。<br /><br />
