--- a/content/cn/posts/2023-02-01-thrush.md
+++ b/content/cn/posts/2023-02-01-thrush.md
@@ -131,6 +131,8 @@ toc: true
 华莱士·斯蒂文斯的《<a href="https://www.poetryfoundation.org/poems/45236/thirteen-ways-of-looking-at-a-blackbird">观察黑鸟的十三种方式</a>》（这首诗中的black bird是否指the common blackbird存疑。）<br /><br />
 
 {{<columns>}}
+{{<columns:auto>}}
+{{<columns:2>}}
 
 
 **I**<br>
@@ -203,7 +205,7 @@ In the cedar-limbs.<br /><br />
 **三**<br /><br />
 黑鸟在秋风阵中疾旋，<br>
 它是哑剧中的小角色。<br /><br />
-<br>
+<br> 
 **四**<br /><br />
 一男一女<br>
 乃一体。<br>
