--- a/content/cn/posts/2023-02-01-thrush.md
+++ b/content/cn/posts/2023-02-01-thrush.md
@@ -23,11 +23,11 @@ toc: true
 
 我是知道上海只有乌鸫，没有乌鸦的。如果哪天你在上海看到了一只黑鸟，几乎可以确定那就是乌鸫。夸张的是，有一次打网球，网球被打飞到天上，正好路过一只乌鸫。或许是它把网球叼走了吧。尽管乌鸫常常出现在我的生活之中（即对面小区的树上），我却从没看清过它的样子。<br /><br />
 
-当我搜索wood thrush的时候，离着最近的关联词是song thrush，简单易懂的名字。唱歌鸫嘛。查了一下它的中文名，竟然真的如此：欧歌鸫。<br /><br />
+当我搜索the wood thrush的时候，离着最近的关联词是the song thrush，简单易懂的名字。唱歌鸫嘛。查了一下它的中文名，竟然真的如此：欧歌鸫。<br /><br />
 
 ### 欧歌鸫
 
-欧歌鸫（the song thrush/Turdus philomelos）是鸫科（Turdidae）的一个鸟种。它是一种生活于欧洲、亚洲和非洲西北部的候鸟。它们身长约25厘米，上身为褐色，下身为乳白色，有黑色斑点，尾部为红褐色。它们以其美丽而悠扬的歌声而闻名，这些歌声通常由重复的短语组成，并模仿其他鸟类。它们以各种昆虫、蚯蚓和蜗牛为食，经常可以看到它们在地上寻找食物。<br /><br />
+欧歌鸫（The Song Thrush/Turdus philomelos）是鸫科（Turdidae）的一个鸟种。它是一种生活于欧洲、亚洲和非洲西北部的候鸟。它们身长约25厘米，上身为褐色，下身为乳白色，有黑色斑点，尾部为红褐色。它们以其美丽而悠扬的歌声而闻名，这些歌声通常由重复的短语组成，并模仿其他鸟类。<br /><br />
 
 在它的介绍中，频繁被提到：它被很多诗人写进诗里，是诗歌常见的意象。<br /><br />
 
@@ -88,7 +88,7 @@ toc: true
 
 像勃朗宁这诗的翻译一样，我注意到很多时候会直接把thrush翻译为画眉。但画眉鸟和鸫鸟完全不是一种鸟类。我查了半天也没有找到什么解释，不过倒是有一个猜测：画眉与the song thrush的外形有些相似，又是都是擅长唱歌的鸟儿，常被人养在家中欣赏，也都是文人墨客笔下的意象。因此，横跨欧亚大陆的两种不同的鸟类，就这样在译者笔下，合二为一。<br /><br />
 
-画眉，the Chinese hwamei/Garrulax canorus，为中国著名的传统笼鸟，备受养鸟者的推崇。英文名为Hwamei，来自画眉（huà-méi） ，表示“画的眉”，指鸟的眼睛周围的独特标记。<br /><br />
+画眉，The Chinese Hwamei/Garrulax canorus，为中国著名的传统笼鸟，备受养鸟者的推崇。英文名为Hwamei，来自画眉（huà-méi） ，表示“画的眉”，指鸟的眼睛周围的独特标记。<br /><br />
 
 欧阳修的《画眉鸟》<br>
 > 百啭千声随意移，<br>
@@ -98,7 +98,7 @@ toc: true
 
 ### 隐夜鸫
 
-鸫鸟有很多种，隐夜鸫（the hermit thrush/Catharus obscurus），同样顾名思义，是一种夜行的鸫鸟，以其黑暗的环境中的活跃性和灵敏的嗓音而闻名。<br /><br />
+鸫鸟有很多种，隐夜鸫（The Hermit Thrush/Catharus obscurus），同样顾名思义，是一种夜行的鸫鸟，以其黑暗的环境中的活跃性和灵敏的嗓音而闻名。<br /><br />
 
 惠特曼在《<a href="https://www.poetryfoundation.org/poems/45480/when-lilacs-last-in-the-dooryard-bloomd">When Lilacs Last in the Dooryard Bloom’d</a>》写到：<br /><br />
 
@@ -126,13 +126,11 @@ toc: true
 
 ### 乌鸫
 
-最后一个我想介绍的，也就是我早就提到的乌鸫（the common blackbird/Turdus merula）属于鸫科，原产于欧洲、亚洲和北非。它们的体长约为25厘米，可通过其光亮的黑色羽翼和红色的眼睛来识别。乌鸫也以其适应性而闻名，在许多城市地区可以看到它们，它们利用花园和公园作为食物来源。 <br /><br />
+最后一个我想介绍的，也就是我早就提到的乌鸫（The Common Blackbird/Turdus merula）属于鸫科，原产于欧洲、亚洲和北非。它们的体长约为25厘米，可通过其光亮的黑色羽翼和红色的眼睛来识别。乌鸫也以其适应性而闻名，在许多城市地区可以看到它们，它们利用花园和公园作为食物来源。 <br /><br />
 
 华莱士·斯蒂文斯的《<a href="https://www.poetryfoundation.org/poems/45236/thirteen-ways-of-looking-at-a-blackbird">观察黑鸟的十三种方式</a>》（这首诗中的black bird是否指the common blackbird存疑。）<br /><br />
 
-{{<columns>}}
-{{<columns:auto>}}
-{{<columns:2>}}
+{{<columns>}}	
 
 
 **I**<br>
