--- a/content/cn/posts/2023-02-01-thrush.md
+++ b/content/cn/posts/2023-02-01-thrush.md
@@ -14,7 +14,7 @@ toc: true
 故事要从上周拍的照片说起。早上十点左右，我带着相机，路过Denny Yard的时候，看到不少鸟在满是露水的草坪上觅食。天阴惨惨的，快门速度也调不高，一连摁了几十张，也拍不到什么太清楚的照片。几十张里，只挑出了这张，裁剪过后，额外加了清晰度。<br>
 
 {{<figure src="/files/thrush.jpg">}}
-
+<br /><br />
 我着实喜欢，这如同加了柔光滤镜的露珠。<br /><br />
 
 问题来了，这是哪种鸟？<br /><br />
@@ -100,7 +100,7 @@ toc: true
 
 鸫鸟有很多种，隐夜鸫（The Hermit Thrush/Catharus obscurus），同样顾名思义，是一种夜行的鸫鸟，以其黑暗的环境中的活跃性和灵敏的嗓音而闻名。<br /><br />
 
-惠特曼在《<a href="https://www.poetryfoundation.org/poems/45480/when-lilacs-last-in-the-dooryard-bloomd">When Lilacs Last in the Dooryard Bloom’d</a>》写到：<br /><br />
+惠特曼在《<a href="https://www.poetryfoundation.org/poems/45480/when-lilacs-last-in-the-dooryard-bloomd">When Lilacs Last in the Dooryard Bloom’d</a>》写到：<br>
 
 > In the swamp in secluded recesses,  <br>
 > A shy and hidden bird is warbling a song.  <br>
@@ -171,7 +171,7 @@ Of one of many circles.   <br /><br />
 
 **X**<br>
 At the sight of blackbirds <br>Flying in a green light,  <br> 
-Even the bawds of euphony <br>Would cry out sharply. <br /><br />  
+Even the bawds of euphony <br>Would cry out sharply. <br /><br />
 
 **XI**<br>
 He rode over Connecticut<br>In a glass coach.   <br>
