--- a/content/cn/posts/2023-02-01-thrush.md
+++ b/content/cn/posts/2023-02-01-thrush.md
@@ -2,7 +2,7 @@
 title: "观察鸫鸟的数种方式"
 date: 2023-02-01T19:47:10-08:00
 author: "李元希"
-slug: "Several Ways Of Looking At A Thrush"
+slug: "several-ways-of-looking-at-thrush"
 draft: false
 toc: true
 ---
