--- a/content/en/posts/2023-08-14-shiny.md
+++ b/content/en/posts/2023-08-14-shiny.md
@@ -10,3 +10,4 @@ toc: false
 <iframe src="https://yuanxili.shinyapps.io/final-deliverable-p03/" width="100%" height="800" frameborder="0"></iframe>
 
 INFO 201 Project
+Using R language
