--- a/content/en/posts/2023-08-14-shiny.md
+++ b/content/en/posts/2023-08-14-shiny.md
@@ -1,8 +1,8 @@
 ---
-title: "2023 08 14 Shiny"
+title: "INFO 201 Project"
 date: 2023-08-14T00:19:45-07:00
 author: "Yuanxi Li"
-slug:
+slug: "201_project"
 draft: false
 toc: false
 ---
