--- a/content/cn/posts/2023-09-08-birthday.md
+++ b/content/cn/posts/2023-09-08-birthday.md
@@ -50,121 +50,78 @@ toc: false
 
 
 
-多久没听到春雷
-
+多久没听到春雷<br>
 将耳膜抨击震碎
-
-
-
-句子写短
-
-简练着无骨语言
-
+<br />
+<br />
+句子写短<br>
+简练着无骨语言<br>
 换上了无所谓的嘴脸
-
-
-
-曾经妄言
-
-手握披荆斩棘的利剑
-
+<br />
+<br />
+曾经妄言<br>
+手握披荆斩棘的利剑<br>
 如今却
-
-
-
-剧烈跳动的声响
-
-来自心脏
-
-
-
-诗人啊
-
+<br />
+<br />
+剧烈跳动的声响<br>
+来自心脏<br />
+<br />
+诗人啊<br>
 怎么让这颗心始终不变
+<br />
+<br />
 
 
 # 十九之歌
 
 
 
-提起笔来
-
-我是个孩童天真
-
-放下笔后
-
+提起笔来<br>
+我是个孩童天真<br>
+放下笔后<br>
 又开始故作深沉
-
-
-
-诗歌的诗歌
-
-仍在寻找哪一种适合
-
-头脑浅薄
-
-比不上十四岁的诗作
-
+<br />
+<br />
+诗歌的诗歌<br>
+仍在寻找哪一种适合<br>
+头脑浅薄<br>
+比不上十四岁的诗作<br>
 一个愚蠢的成年人呵
-
-
-
+<br />
+<br />
 江面开阔
-
 与泥沙沉底
-
 再被波浪卷起
-
 如此而已
-
 四季更替
-
-
-
+<br />
+<br />
 深不见
-
 各色鹅卵石散落
-
 或者是蜕皮后的蟹壳
-
 发梢支棱着
-
-
-
-从日记变成
-
-繁忙中首先放弃的
-
-奢侈品
-
+<br />
+<br />
+从日记变成<br>
+繁忙中首先放弃的<br>
+奢侈品<br>
 从前日子多清闲吗？
-
-
-
-爱与愤怒
-
-已经没有感受的人
-
-闭眼摸索不到桎梏
-
+<br />
+<br />
+爱与愤怒<br>
+已经没有感受的人<br>
+闭眼摸索不到桎梏<br>
 现实蒙蔽了心神
-
-
-
-哼出心中的歌
-
-没有曲调
-
-吵闹的安静的
-
-没有人知道
-
+<br />
+<br />
+哼出心中的歌<br>
+没有曲调<br>
+吵闹的安静的<br>
+没有人知道<br>
 包括我
-
-
-
-成年人的生活
-
-依然单调
-
-我早该知道
+<br />
+<br />
+成年人的生活<br>
+依然单调<br>
+我早该知道<br>
