--- a/content/en/posts/2023-08-14-shiny.md
+++ b/content/en/posts/2023-08-14-shiny.md
@@ -1,5 +1,5 @@
 ---
-title: "INFO 201 Project"
+title: "Visualizing Crime in Los Angeles"
 date: 2023-08-14T00:19:45-07:00
 author: "Yuanxi Li"
 slug: "201_project"
@@ -7,7 +7,9 @@ draft: false
 toc: false
 ---
 
+INFO 201 Project
+
+Our group is dedicated to comprehensively exploring the crime landscape in Los Angeles. Our research lies in utilizing advanced data visualization tools and techniques in R to dissect the dataset from the Los Angeles Police Department, unveiling intricate crime patterns and trends. Our multifaceted analysis also seeks to unearth additional insights and information relevant to this critical topic, providing a holistic understanding of crime dynamics in the city.
+
 <iframe src="https://yuanxili.shinyapps.io/final-deliverable-p03/" width="100%" height="800" frameborder="0"></iframe>
 
-INFO 201 Project
-Using R language
