--- a/content/en/posts/2025-02-22-Security+.md
+++ b/content/en/posts/2025-02-22-Security+.md
@@ -1,6 +1,6 @@
 ---
-title: "Read: The Scientist's Guide to Writing"
-date: 2025-02-19
+title: "How to Pass CompTIA Security+ SY0-701 in Three Months Without Any Cybersecurity Background"
+date: 2025-02-22
 author: Yuanxi Li
 slug: "scientist-writing-guide "
 draft: false
